feat: Standardize API response format to ApiResponse - Update enpoints to return data in the Standardized ApiResponse format - Ensured that all relevant data is encapsulated within the 'data' field - Modified existing response structures to include 'message' and 'status' fields.