@@ -4,11 +4,12 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.huungan.shopapp.components.LocalizationUtils;
 import com.huungan.shopapp.dtos.ProductDTO;
 import com.huungan.shopapp.models.Product;
-import com.huungan.shopapp.responses.MessageResponse;
+import com.huungan.shopapp.responses.ResponseObject;
 import com.huungan.shopapp.responses.products.ProductListResponse;
 import com.huungan.shopapp.responses.products.ProductResponse;
 import com.huungan.shopapp.services.IProductRedisService;
 import com.huungan.shopapp.services.IProductService;
+import com.huungan.shopapp.utils.MessageKeys;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import com.github.javafaker.Faker;
@@ -17,6 +18,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.validation.BindingResult;
@@ -37,31 +39,33 @@ public class ProductController {
     private static final Logger logger = LoggerFactory.getLogger(ProductController.class);
 
     @PostMapping("")
-    public ResponseEntity<?> createProduct(
+    public ResponseEntity<ResponseObject> createProduct(
             @Valid @RequestBody ProductDTO productDTO,
             BindingResult result
-    ) {
-        try {
-            if(result.hasErrors()) {
-                List<String> errorMessages = result.getFieldErrors()
-                        .stream()
-                        .map(FieldError::getDefaultMessage)
-                        .toList();
-                return ResponseEntity.badRequest().body(errorMessages);
-            }
-            Product newProduct = productService.createProduct(productDTO);
-
-            return ResponseEntity.ok(newProduct);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
+    ) throws Exception {
+        if(result.hasErrors()) {
+            List<String> errorMessages = result.getFieldErrors()
+                    .stream()
+                    .map(FieldError::getDefaultMessage)
+                    .toList();
+            return ResponseEntity.badRequest().body(ResponseObject.builder()
+                    .status(HttpStatus.BAD_REQUEST)
+                    .message(String.join("; ", errorMessages))
+                    .build());
         }
+        Product newProduct = productService.createProduct(productDTO);
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .status(HttpStatus.OK)
+                .data(newProduct)
+                .message(localizationUtils.getLocalizedMessage(MessageKeys.CREATE_PRODUCT_SUCCESSFULLY))
+                .build());
     }
 
 
 
 
     @GetMapping("")
-    public ResponseEntity<ProductListResponse> getProducts(
+    public ResponseEntity<ResponseObject> getProducts(
             @RequestParam(defaultValue = "") String keyword,
             @RequestParam(defaultValue = "0", name = "category_id") Long categoryId,
             @RequestParam(defaultValue = "0") int page,
@@ -87,62 +91,61 @@ public class ProductController {
                     pageRequest
             );
         }
-        ;
-        return ResponseEntity.ok(ProductListResponse.builder()
-                        .products(productResponses)
-                        .totalPages(totalPages)
-                        .build());
+        ProductListResponse productListResponse = ProductListResponse.builder()
+                .products(productResponses)
+                .totalPages(totalPages)
+                .build();
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .status(HttpStatus.OK)
+                .data(productListResponse)
+                .message(localizationUtils.getLocalizedMessage(MessageKeys.FIND_PRODUCT_BY_KEYWORD_SUCCESSFULLY))
+                .build());
     }
 
     @GetMapping("/by-ids")
-    public ResponseEntity<?> getProductByIds(@RequestParam("ids") String ids) {
-        try {
-            List<Long> productIds = Arrays.stream(ids.split(","))
-                    .map(Long::parseLong)
-                    .collect(Collectors.toList());
-            List<Product> products = productService.findByProductIds(productIds);
-            return ResponseEntity.ok(products);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    public ResponseEntity<ResponseObject> getProductByIds(@RequestParam("ids") String ids) {
+        List<Long> productIds = Arrays.stream(ids.split(","))
+                .map(Long::parseLong)
+                .toList();
+        List<Product> products = productService.findByProductIds(productIds);
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .status(HttpStatus.OK)
+                .data(products)
+                .message(localizationUtils.getLocalizedMessage(MessageKeys.FIND_PRODUCT_BY_IDS_SUCCESSFULLY))
+                .build());
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<?> getProductById(@PathVariable("id") long id) {
-        try {
-            Product existingProduct = productService.getProductById(id);
-            return ResponseEntity.ok(ProductResponse.fromProduct(existingProduct));
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    public ResponseEntity<?> getProductById(@PathVariable("id") long id) throws Exception{
+        Product existingProduct = productService.getProductById(id);
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .status(HttpStatus.OK)
+                .data(existingProduct)
+                .message(localizationUtils.getLocalizedMessage(MessageKeys.FIND_PRODUCT_BY_ID_SUCCESSFULLY))
+                .build());
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<MessageResponse> deleteProduct(@PathVariable long id) {
-        try {
-            productService.deleteProduct(id);
-            return ResponseEntity.ok(MessageResponse.builder()
-                            .message(String.format("Product with id = %d deleted successfully", id))
-                    .build());
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(MessageResponse.builder()
-                            .message(e.getMessage())
-                    .build());
-        }
+    public ResponseEntity<ResponseObject> deleteProduct(@PathVariable long id) {
+        productService.deleteProduct((id));
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .status(HttpStatus.OK)
+                .message(localizationUtils.getLocalizedMessage(MessageKeys.DELETE_PRODUCT_BY_ID_SUCCESSFULLY))
+                .build());
     }
 
     @PutMapping("/{id}")
     @PreAuthorize("hasRole('ROLE_ADMIN')")
-    public ResponseEntity<?> updateProduct(
+    public ResponseEntity<ResponseObject> updateProduct(
             @PathVariable Long id,
             @RequestBody ProductDTO productDTO
-    ) {
-        try {
-            Product updatedProduct = productService.updateProduct(id, productDTO);
-            return ResponseEntity.ok(productDTO);
-        } catch (Exception e) {
-            return ResponseEntity.badRequest().body(e.getMessage());
-        }
+    ) throws Exception{
+        Product updateProduct = productService.updateProduct(id, productDTO);
+        return ResponseEntity.ok().body(ResponseObject.builder()
+                .status(HttpStatus.OK)
+                .data(productDTO)
+                .message(localizationUtils.getLocalizedMessage(MessageKeys.UPDATE_PRODUCT_BY_ID_SUCCESSFULLY))
+                .build());
     }
 
 //    @PostMapping("generate-fake-products")
